# taskflow

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  publish.yml
alembic/: env.py
alembic/versions/: 7623e7832825_create_tasks_table.py
app/: app_factory.py  app_ref.py  main.py
app/api/routes/: health.py  tasks.py
app/core/: config.py  config1.py
app/db/: database.py
app/models/: task.py
app/schemas/: task.py
app/services/: task_service.py
compose/: docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
docker/: Dockerfile
requirements/: base.txt
scripts/: deploy.sh  rollback.sh
taskflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_health.py  testtasks.py
